--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,8 @@
     <meta name="geo.placename" content="India" />
     <link rel="canonical" href="https://sanganakhq.com/" />
 
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <!-- Favicon / Title bar logo -->
+    <link rel="icon" type="image/png" href="/SanganakHQLogo.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- Playfair Display for luxury headers, Inter for clean body text, JetBrains Mono for code aesthetics -->
